<resources>
    <string name="app_name">QRay</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signup_text">Don\'t have an account? Signup instead</string>
    <string name="login_back">Already have an account? Login instead</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create An Account</string>
    <string name="college_id">College ID</string>
    <string name="register">Register</string>
    <string name="document_empty_state">No documents found. \n Upload a document by clicking on the \'+\' button.</string>
    <string name="title_fragment_attendance">AttendanceFragment</string>
    <string name="title_fragment_document">DocumentFragment</string>
    <string name="file_upload">File Upload</string>
    <string name="file_name">File Name…</string>
    <string name="country">Country</string>
    <string name="phone">Phone Number</string>
    <string name="create_attendance_button">Create Attendance Button</string>
    <string name="create">Create</string>
    <string name="mark">Mark</string>
    <string name="total_attendees">Total Attendees</string>
    <string name="date">Date</string>
    <string name="time">time</string>
    <string name="upload">Upload</string>
    <string name="qr_empty_state">No active QRs. \n Create QRs by holding on document items and clicking on + button.</string>
    <string name="session_name">Session Name</string>
    <string name="valid_time_in_hours">Valid Time (in hours)</string>
    <string name="searchbar_hint">Search QRs</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="expired">Expired</string>
    <string name="attendees_empty_state">No one has marked this attendance.</string>
    <string name="create_qr">Create QR with selected Documents</string>
    <string name="attendance_empty_state">No attendance created. \n Create an attendance register by clicking on the \'+\' button.</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="refresh">Refresh</string>
    <string name="attendance_name">Attendance Name</string>
</resources>