<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/input_background"
    android:backgroundTint="@color/primary_blue"
    android:baselineAligned="true"
    android:gravity="center"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:layout_editor_absoluteX="16dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:gravity="center_vertical"
        android:hint="@string/attendance_name"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="#75768E"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/baseline_person_24"
        app:drawableTint="@color/white" />

    <Button
        android:id="@+id/create"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:contentDescription="@string/file_upload"
        android:maxWidth="10dp"
        android:minHeight="48dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/secondary_blue" />


</LinearLayout>