<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:baselineAligned="true"
    android:gravity="center"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:layout_editor_absoluteX="16dp">

    <EditText
        android:id="@+id/session_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:hint="@string/session_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="#75768E" />


    <EditText
        android:id="@+id/valid_time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:hint="@string/valid_time_in_hours"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="#75768E" />

    <Spinner
        android:id="@+id/session_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/docs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:drawablePadding="8dp"
        android:enabled="false"
        android:minHeight="48dp"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/baseline_lock_24"
        app:drawableTint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:contentDescription="@string/file_upload"
            android:minHeight="48dp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/secondary_blue" />
    </LinearLayout>


</LinearLayout>