<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/input_background"
    android:backgroundTint="@color/primary_blue"
    android:baselineAligned="true"
    android:gravity="center"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:layout_editor_absoluteX="16dp">

    <TextView
        android:id="@+id/file_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/file_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/baseline_file_upload_24"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/docReference"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:drawablePadding="8dp"
        android:ellipsize="end"
        android:enabled="false"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/baseline_lock_24"
        app:drawableTint="@color/white" />

    <Button
        android:id="@+id/upload"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:contentDescription="@string/file_upload"
        android:maxWidth="10dp"
        android:minHeight="48dp"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/secondary_blue" />


</LinearLayout>