<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_blue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:importantForAutofill="no"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="QRay Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.165">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name_for_signup"
                    android:layout_width="131dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/input_background"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/black"
                    android:ems="10"
                    android:hint="@string/firstName"
                    android:inputType="textPersonName"
                    android:paddingStart="4dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/last_name_for_signup"
                    android:layout_width="131dp"
                    android:layout_height="48dp"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <EditText
                android:id="@+id/email_for_signup"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="4dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:drawablePadding="4dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password_for_signup"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="4dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/confirm_password_for_signup"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="4dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill" />

            <!--            <EditText-->
            <!--                android:id="@+id/college_id"-->
            <!--                android:layout_width="270dp"-->
            <!--                android:layout_height="45dp"-->
            <!--                android:background="@drawable/input_background"-->
            <!--                android:drawableStart="@drawable/baseline_perm_identity_24"-->
            <!--                android:drawablePadding="4dp"-->
            <!--                android:drawableTint="@color/black"-->
            <!--                android:ems="10"-->
            <!--                android:hint="@string/college_id"-->
            <!--                android:inputType="textPassword"-->
            <!--                android:paddingStart="8dp"-->
            <!--                android:paddingEnd="4dp"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textColorHint="@color/cardview_dark_background"-->
            <!--                tools:ignore="Autofill" />-->

            <EditText
                android:id="@+id/country"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="4dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                tools:ignore="Autofill" />
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="253dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/button_style"
            android:backgroundTintMode="add"
            android:drawableEnd="@drawable/baseline_arrow_forward_24"
            android:drawableTint="@color/white"
            android:text="@string/signup"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/login_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/login_back"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
